{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 155,
  "lineage": "434df3b0-9fae-7b58-06d2-101085dc03bc",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-039a8ebebdd2a1def",
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:instance/i-070841f6729f907a8",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070841f6729f907a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096f4df994b470a6e",
            "private_dns": "ip-10-0-1-235.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-13-229-199-7.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.199.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b33b2383567ba006",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a91828a598d43656",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Bastion",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Bastion",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7677b45a70c6ebb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.data.aws_ami.amazon_linux_2023",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0",
            "arn_suffix": "net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0",
            "dns_name": "Llamas-FinalProject-NLB-389c3ccb29ddc2e0.elb.ap-southeast-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Llamas-FinalProject-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04105a3a334fe0ea4"
              },
              {
                "subnet_id": "subnet-0e49ef974863cbcb3"
              }
            ],
            "subnets": [
              "subnet-04105a3a334fe0ea4",
              "subnet-0e49ef974863cbcb3"
            ],
            "vpc_id": "vpc-07e35b11c8b1a73e0",
            "zone_id": "ZKVM4W9LS7TM"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/app/Llamas-alb/c1aa59339ea434ec",
            "arn_suffix": "app/Llamas-alb/c1aa59339ea434ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Llamas-alb-1401322639.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/app/Llamas-alb/c1aa59339ea434ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Llamas-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084bb340da6455bbe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081f397c293d3bd7c"
              },
              {
                "subnet_id": "subnet-0a91828a598d43656"
              }
            ],
            "subnets": [
              "subnet-081f397c293d3bd7c",
              "subnet-0a91828a598d43656"
            ],
            "vpc_id": "vpc-07e35b11c8b1a73e0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:listener/net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0/20466af1fb782ef2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-back-tg/09bd79a5619ab752",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:listener/net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0/20466af1fb782ef2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/net/Llamas-FinalProject-NLB/389c3ccb29ddc2e0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.backend",
            "module.compute.aws_lb_target_group.backend_tg",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:listener/app/Llamas-alb/c1aa59339ea434ec/3b8305f015982cff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-front-tg/22b5f8cf78076f01",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:listener/app/Llamas-alb/c1aa59339ea434ec/3b8305f015982cff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:loadbalancer/app/Llamas-alb/c1aa59339ea434ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute.aws_lb.frontend",
            "module.compute.aws_lb_target_group.frontend_tg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-back-tg/09bd79a5619ab752",
            "arn_suffix": "targetgroup/Llamas-back-tg/09bd79a5619ab752",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-back-tg/09bd79a5619ab752",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Llamas-back-tg",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-front-tg/22b5f8cf78076f01",
            "arn_suffix": "targetgroup/Llamas-front-tg/22b5f8cf78076f01",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:345241143078:targetgroup/Llamas-front-tg/22b5f8cf78076f01",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Llamas-front-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09253b3b1dbbd2c96",
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:elastic-ip/eipalloc-09253b3b1dbbd2c96",
            "domain": "vpc",
            "id": "eipalloc-09253b3b1dbbd2c96",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-251-165-201.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.165.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:internet-gateway/igw-0a35371bda6f1e280",
            "id": "igw-0a35371bda6f1e280",
            "owner_id": "345241143078",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-IGW",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-IGW",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09253b3b1dbbd2c96",
            "association_id": "eipassoc-0b03de3da2871e67e",
            "connectivity_type": "public",
            "id": "nat-051d2a18af3dbb464",
            "network_interface_id": "eni-0e2dc26abd9c6cd90",
            "private_ip": "10.0.2.17",
            "public_ip": "13.251.165.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081f397c293d3bd7c",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-NAT",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-NAT",
              "ProjectCode": "Terraform101-CloudIntern"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:route-table/rtb-0da81b04734505870",
            "id": "rtb-0da81b04734505870",
            "owner_id": "345241143078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051d2a18af3dbb464",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Private-RT",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Private-RT",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:route-table/rtb-0838ca773e0b4afec",
            "id": "rtb-0838ca773e0b4afec",
            "owner_id": "345241143078",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a35371bda6f1e280",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Public-RT",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-Public-RT",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e40c228a617f2e2d",
            "route_table_id": "rtb-0da81b04734505870",
            "subnet_id": "subnet-04105a3a334fe0ea4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc813ad69902b90c",
            "route_table_id": "rtb-0da81b04734505870",
            "subnet_id": "subnet-0e49ef974863cbcb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c04f8d24b1fa70b5",
            "route_table_id": "rtb-0838ca773e0b4afec",
            "subnet_id": "subnet-0a91828a598d43656"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e540693c9b3cc5cf",
            "route_table_id": "rtb-0838ca773e0b4afec",
            "subnet_id": "subnet-081f397c293d3bd7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:subnet/subnet-04105a3a334fe0ea4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04105a3a334fe0ea4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345241143078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivSub-0",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivSub-0",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:subnet/subnet-0e49ef974863cbcb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e49ef974863cbcb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "345241143078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivSub-1",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivSub-1",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:subnet/subnet-0a91828a598d43656",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91828a598d43656",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345241143078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PubSub-0",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PubSub-0",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:subnet/subnet-081f397c293d3bd7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081f397c293d3bd7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "345241143078",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PubSub-1",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PubSub-1",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:vpc/vpc-07e35b11c8b1a73e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052162bfc0c9d3277",
            "default_route_table_id": "rtb-0adc63c5752087989",
            "default_security_group_id": "sg-0caf624b57d9f44f4",
            "dhcp_options_id": "dopt-02dae21c73d7ffb93",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e35b11c8b1a73e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0adc63c5752087989",
            "owner_id": "345241143078",
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-VPC",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-FinalProject-VPC",
              "ProjectCode": "Terraform101-CloudIntern"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:security-group/sg-084bb340da6455bbe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084bb340da6455bbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Llamas-ALBSG",
            "name_prefix": "",
            "owner_id": "345241143078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-ALBSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-ALBSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:security-group/sg-0e7677b45a70c6ebb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7677b45a70c6ebb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Llamas-BastionSG",
            "name_prefix": "",
            "owner_id": "345241143078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-BastionSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-BastionSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:345241143078:security-group/sg-05604706c31d4e3c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05604706c31d4e3c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7677b45a70c6ebb"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-084bb340da6455bbe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Llamas-PrivateSG",
            "name_prefix": "",
            "owner_id": "345241143078",
            "revoke_rules_on_delete": false,
            "tags": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivateSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "tags_all": {
              "Engineer": "Llamas-MaxineSofia",
              "Name": "Llamas-PrivateSG",
              "ProjectCode": "Terraform101-CloudIntern"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e35b11c8b1a73e0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.bastion_sg"
          ]
        }
      ]
    }
  ]
}